# burn_dragon_hatchling

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy-pages.yml
assets/model/tiny_shakespeare/: config.json  vocab.json
bench/: inference.rs  train.rs
config/: base.toml  eggroll.toml  large.toml  small.toml  tiny.toml
src/: generation.rs  inference.rs  lib.rs  positional.rs  web.rs  wgpu.rs
src/config/: core.rs  mod.rs  train.rs
src/dataset/: factory.rs  huggingface.rs  mod.rs  scheduler.rs  shakespeare.rs
src/eggroll/: bdh_integration.rs  distributed.rs  mod.rs  model.rs  noiser.rs  rng.rs
src/kernel/: linear_attention.rs
src/model/: attention.rs  bdh.rs  config.rs  mod.rs  state.rs
src/tokenizer/: char_vocab.rs  mod.rs
src/viz/: activity.rs  app.rs  bevy_app.rs  collect.rs  encoder.rs  frame.rs  imp.rs  mod.rs  noop.rs  palette.rs  transport.rs
src/viz/imp/: video.rs
tests/: dataset_tests.rs  eggroll_es_math.rs  eggroll_registry_tests.rs  eggroll_rng_device.rs  eggroll_tests.rs  fused_kernel_tests.rs  model_paths.rs  train_smoke.rs  training_step_tests.rs
www/: README.md  index.html
