[package]
name = "burn_dragon_hatchling"
description = "burn (baby) dragon hatchling inference and training"
version = "0.3.0"
edition = "2024"
authors = ["mosure <mitchell@mosure.me>"]
license = "MIT OR Apache-2.0"
keywords = [
  "burn",
  "bdh",
  "language-model",
  "machine-learning",
]
categories = [
  "compression",
  "science",
  "science::neuroscience",
]
homepage = "https://github.com/mosure/burn_dragon_hatchling"
repository = "https://github.com/mosure/burn_dragon_hatchling"
readme = "README.md"
exclude = [
  ".devcontainer",
  ".github",
  "docs",
  "dist",
  "build",
  "assets",
  "credits",
]
default-run = "train"


[features]
default = ["cuda", "viz"]

benchmark = ["burn/autotune", "burn/fusion"]
cuda = ["burn/cuda", "burn-cuda"]
viz = [
  "dep:crossbeam-channel",
  "dep:parking_lot",
  "dep:ndarray",
]


[dependencies]
toml = "0.9"
rand = "0.8"
ureq = { version = "2.9", features = ["tls"] }
hf-hub = { version = "0.4", default-features = false, features = ["ureq"] }
parquet = "53"
burn-ndarray = "=0.20.0-pre.3"
burn-autodiff = "=0.20.0-pre.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = "2.5"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1"
crossbeam-channel = { version = "0.5", optional = true }
parking_lot = { version = "0.12", optional = true }
ndarray = { version = "0.16", optional = true }
tempfile = "3"
plotters = { version = "0.3", default-features = false, features = ["bitmap_backend", "line_series"] }
plotters-bitmap = "0.3"
burn-collective = "=0.20.0-pre.3"


[dependencies.burn]
version = "=0.20.0-pre.3"
default-features = true
features = [
  # "autotune",
  "fusion",
  "ndarray",
  "std",
  # "vulkan",
  # "webgpu",
  "wgpu",
  "cuda",
]

[dependencies.burn-wgpu]
version = "=0.20.0-pre.3"
default-features = true
features = [
  "fusion",
  "std",
  # "template",
]

[dependencies.cubecl]
version = "=0.9.0-pre.3"
default-features = true
features = [
  # "autotune-checks",
  # "linalg",
  "std",
  # "template",
  # "wgpu",
  # "wgpu-spirv",
]

[dependencies.cubecl-runtime]
version = "=0.9.0-pre.3"
default-features = true
features = [
  # "autotune-checks",
  # "channel-cell",
  "channel-mpsc",
  # "channel-mutex",
  "std",
  # "storage-bytes",
]

[dependencies.burn-train]
version = "=0.20.0-pre.3"
default-features = false
features = [
  "tui",
]

[dependencies.tracing]
version = "0.1"

[dependencies.burn-cuda]
version = "=0.20.0-pre.3"
optional = true
default-features = false
features = [
  "fusion",
  "std",
]


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"


[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Location',
  'Node',
  'Window',
]


[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
futures-intrusive = { version = "0.5.0" }
pollster = { version = "0.4.0" }


[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
strip = "symbols"
lto = "thin"
codegen-units = 1
opt-level = 3
panic = "abort"

[profile.wasm-release]
strip = "symbols"
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"


[lib]
path = "src/lib.rs"

[[bin]]
name = "infer"
path = "src/bin/infer.rs"

[[bin]]
name = "train"
path = "src/bin/train.rs"

[[bench]]
name = "inference"
harness = false
path = "bench/inference.rs"

[[bench]]
name = "train"
harness = false
path = "bench/train.rs"
