[package]
name = "burn_dragon_hatchling"
description = "burn (baby) dragon hatchling inference and training"
version = "0.3.0"
edition = "2024"
authors = ["mosure <mitchell@mosure.me>"]
license = "MIT OR Apache-2.0"
keywords = [
  "burn",
  "bdh",
  "language-model",
  "machine-learning",
]
categories = [
  "compression",
  "science",
  "science::neuroscience",
]
homepage = "https://github.com/mosure/burn_bdh"
repository = "https://github.com/mosure/burn_bdh"
readme = "README.md"
exclude = [
  ".devcontainer",
  ".github",
  "docs",
  "dist",
  "build",
  "assets",
  "credits",
]
default-run = "train"


[features]
default = ["cli", "cuda"]

benchmark = ["burn/autotune", "burn/fusion"]
cli = [
  "train",
  "dep:burn-autodiff",
  "dep:burn-ndarray",
  "dep:burn-train",
  "dep:clap",
  "dep:ctrlc",
  "dep:names",
]
train = [
  "dep:toml",
  "dep:ureq",
  "dep:hf-hub",
  "dep:csv",
  "dep:parquet",
  "dep:tracing",
]
cuda = ["burn/cuda", "burn-cuda"]
web = ["burn/webgpu", "burn-wgpu/webgpu", "viz"]
viz = [
  "dep:bevy",
  "dep:bevy_burn",
]


[dependencies]
bevy_burn = { version = "0.4", optional = true }
ctrlc = { version = "3.4", optional = true }
toml = { version = "0.9", optional = true }
rand = "0.8"
ureq = { version = "2.9", features = ["tls"], optional = true }
hf-hub = { version = "0.4", default-features = false, features = ["ureq"], optional = true }
parquet = { version = "53", optional = true }
burn-ndarray = { version = "0.19", optional = true }
burn-autodiff = { version = "0.19", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = "2.5"
clap = { version = "4.5", features = ["derive"], optional = true }
anyhow = "1"
csv = { version = "1.3", optional = true }
crossbeam-channel = { version = "0.5", optional = true }
parking_lot = { version = "0.12", optional = true }
ndarray = { version = "0.16", optional = true }
tempfile = { version = "3", optional = true }
plotters = { version = "0.3", default-features = false, features = ["bitmap_backend", "line_series"], optional = true }
plotters-bitmap = { version = "0.3", optional = true }
names = { version = "0.14", optional = true }


[dependencies.bevy]
version = "0.17"
default-features = false
optional = true
features = [
  "bevy_asset",
  "bevy_camera",
  "bevy_core_pipeline",
  "bevy_gizmos",
  "bevy_gltf",
  "bevy_image",
  "bevy_log",
  "bevy_light",
  "bevy_mesh",
  "bevy_pbr",
  "bevy_render",
  "bevy_post_process",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "bevy_ui_render",
  "bevy_window",
  "bevy_winit",
  "default_font",
  "jpeg",
  "png",
  "std",
  "tonemapping_luts",
  "webgpu",
  "x11",
  "zstd_rust",
]


[dependencies.burn]
version = "0.19"
default-features = false
features = [
  # "autotune",
  "fusion",
  "ndarray",
  "std",
  # "vulkan",
  # "webgpu",
  "wgpu",
]

[dependencies.burn-wgpu]
version = "0.19"
default-features = false
features = [
  "fusion",
  "std",
  # "template",
]

[dependencies.cubecl]
version = "0.8"
default-features = true
features = [
  # "autotune-checks",
  # "linalg",
  "std",
  # "template",
  # "wgpu",
  # "wgpu-spirv",
]

[dependencies.cubecl-runtime]
version = "0.8"
default-features = true
features = [
  # "autotune-checks",
  # "channel-cell",
  "channel-mpsc",
  # "channel-mutex",
  "std",
  # "storage-bytes",
]

[dependencies.burn-train]
version = "0.19"
optional = true
default-features = false
features = [
  "tui",
]

[dependencies.tracing]
version = "0.1"
optional = true

[dependencies.burn-cuda]
version = "0.19"
optional = true
default-features = false
features = [
  "fusion",
  "std",
]


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
getrandom = { version = "0.3", features = ["wasm_js"] }
getrandom02 = { package = "getrandom", version = "0.2", features = ["js"] }


[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Location',
  'Node',
  'Window',
]


[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
futures-intrusive = { version = "0.5.0" }
pollster = { version = "0.4.0" }
tempfile = "3"


[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
strip = "symbols"
lto = "thin"
codegen-units = 1
opt-level = 3
panic = "abort"

[profile.wasm-release]
strip = "symbols"
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"


[lib]
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "infer"
path = "src/bin/infer.rs"
required-features = ["cli"]

[[bin]]
name = "train"
path = "src/bin/train.rs"
required-features = ["cli"]

[[bin]]
name = "quantize"
path = "src/bin/quantize.rs"
required-features = ["cli"]

[[bench]]
name = "inference"
harness = false
path = "bench/inference.rs"

[[bench]]
name = "train"
harness = false
path = "bench/train.rs"
